--- a/Final Report/Dan's Tech Appendix.Rmd
+++ b/Final Report/Dan's Tech Appendix.Rmd
@@ -51,16 +51,33 @@ if (!require("splines")){
 if (!require("leaps")){
   install.packages("leaps")
   library("leaps")
-} # To use spline curves for models (https://www.rdocumentation.org/packages/splines/versions/3.5.1)
+} # To use best subsets for models (https://www.rdocumentation.org/packages/leaps/versions/3.0)
 if (!require("modEvA")){
   install.packages("modEvA")
   library("modEvA")
 } # To calculate D-Squared (https://www.rdocumentation.org/packages/modEvA/versions/1.3.2)
+if (!require("geojsonio")){
+  install.packages("geojsonio")
+  library("geojsonio")
+} # To read a .geojson file into R to different types for map use (https://www.rdocumentation.org/packages/geojsonio/versions/0.6.0)
+if (!require("openintro")){
+  install.packages("openintro")
+  library("openintro")
+} # To convert state abbreviations to state names (https://www.rdocumentation.org/packages/openintro/versions/1.7.1)
+if (!require("broom")){
+  install.packages("broom")
+  library("broom")
+} # To tidy and foritify the data into a dataframe for map use (https://www.rdocumentation.org/packages/broom/versions/0.5.0)
+if (!require("rgeos")){
+  install.packages("rgeos")
+  library("rgeos")
+} # To calculate the centre of each state for map use (https://www.rdocumentation.org/packages/rgeos/versions/0.4-2)
 ```
+# Loading and Tidying the Data
 
 ```{r Import Data, echo=FALSE, message=FALSE}
 ATUS_dataset <- import("../Data/atussum_0317.csv", setclass = "tibble")    # import raw summary data as TIBBLE
-ATUS_Respondent_file <- import("../Data/atusresp_0317.csv", setclass = "tibble") # import respondent data as TIBBLE
+ATUS.CPS <- import('atuscps_0317.csv', setclass = "tibble") # import CPS data as TIBBLE for geographical data use
 ```
 
 ```{r Tidying the Data, echo=FALSE, message=FALSE}
@@ -68,8 +85,10 @@ ATUS_Respondent_file <- import("../Data/atusresp_0317.csv", setclass = "tibble")
 NA_check <- sum(is.na(ATUS_dataset))
 
 # Add date from respondent file and change Sex values to M and F instead of 1 and 2
-ATUS_Respondent_file$TUDIARYDATE <- as.Date(as.character(ATUS_Respondent_file$TUDIARYDATE), "%Y%m%d")
-ATUS_dataset <- mutate(ATUS_dataset, TESEX = ifelse(TESEX == 1, "M", "F"), TUDIARYDATE = ATUS_Respondent_file$TUDIARYDATE)
+ATUS_dataset <- mutate(ATUS_dataset, TESEX = ifelse(TESEX == 1, "M", "F"))
+# Create a diary date column based off of the unique ID
+ATUS_dataset$TUDIARYDATE <- as.Date(paste0(substr(ATUS.dataset$TUCASEID, 1, 6), '01'), "%Y%m%d")
+
 
 # A change of variable name in this period leads to missing values so we merge these 2 variables
 ATUS_dataset <- mutate(ATUS_dataset, Met_Status = as.factor(pmax(GEMETSTA, GTMETSTA)))
@@ -99,9 +118,10 @@ for (i in c(10:16, 18)){
   names(ATUS_dataset)[ncol(ATUS_dataset)] <- paste0("part_tu", i)
 }
 
-# Remove July for validation purposes
+# Remove odd months (including July) for validation purposes
 ATUS_training_data <- filter(ATUS_dataset, month(TUDIARYDATE) %in% c(2,4,6,8,10,12))
 ATUS_validation_data <- filter(ATUS_dataset, month(TUDIARYDATE) %in% c(1,3,5,7,9,11))
+ATUS_plotting_data <- filter(ATUS_dataset, month(TUDIARYDATE) != 7)
 
 # Remove columns with -1's, -3's, -4's. We do this instead of removing rows as we would only be left with 1431 observations
 
@@ -481,36 +501,29 @@ With a p-value << 0.05, this test confirms this belief in the validation data.
 
 
 ```{r, cache=TRUE}
-# Import ATUS Summary file
-ATUS.SUM <- import('atussum_0317.csv', setclass = "tibble")
-# Import ATUS CPS File
-ATUS.CPS <- import('atuscps_0317.csv', setclass = "tibble")
-# Create a diary date column
-ATUS.SUM$TUDIARYDATE <- as.Date(paste0(substr(ATUS.SUM$TUCASEID, 1, 6), '01'), "%Y%m%d")
-# Add months as a column as a derivative of the TUCASEID variable
-ATUS.SUM$TUMONTH <- as.numeric(substr(ATUS.SUM$TUCASEID, 5, 6))
+
 # Get birth year as a variable for purpose of classifying generation
-ATUS.SUM$TUBIRTHYEAR <- ATUS.SUM$TUYEAR - ATUS.SUM$TEAGE
-#Classify Generations
-ATUS.SUM$TUGENERATION <- ifelse(ATUS.SUM$TUBIRTHYEAR < 1946, "Silent Generation", 
-    ifelse(ATUS.SUM$TUBIRTHYEAR < 1965, "Baby Boomers",
-        ifelse(ATUS.SUM$TUBIRTHYEAR < 1981, "Generation X", "Millenials")))
+ATUS_dataset$TUBIRTHYEAR <- ATUS_dataset$TUYEAR - ATUS_dataset$TEAGE
+# Classify Generations 
+ATUS_dataset$TUGENERATION <- ifelse(ATUS_dataset$TUBIRTHYEAR < 1946, "Silent Generation", 
+    ifelse(ATUS_dataset$TUBIRTHYEAR < 1965, "Baby Boomers",
+        ifelse(ATUS_dataset$TUBIRTHYEAR < 1981, "Generation X", "Millennials")))
 # Filter CPS down to just relevant variables. GEDSTFIPS is state, GEDIV is division and GEREG is region
 ATUS.CPS.States <- select(ATUS.CPS, TUCASEID, GESTFIPS, GEDIV, GEREG)
 ATUS.CPS.States <- distinct(ATUS.CPS.States)
 # Create variables to be added to a data frame with relevant gender activities 
-Working <- ATUS.SUM[, grep("^t05", names(ATUS.SUM))]
-House.Maintenance <- ATUS.SUM[, grep("^t0204", names(ATUS.SUM))]
-Vehicle.Maintenance <- ATUS.SUM[, grep("^t0207", names(ATUS.SUM))]
-Housework <- ATUS.SUM[, grep("^t0201", names(ATUS.SUM))]
-Food.Preparation <- ATUS.SUM[, grep("^t0202", names(ATUS.SUM))] + ATUS.SUM$t070101 + ATUS.SUM$t070103
-Childcare <- ATUS.SUM[, grep("^t03", names(ATUS.SUM))]
+Working <- ATUS_dataset[, grep("^t05", names(ATUS_dataset))]
+House.Maintenance <- ATUS_dataset[, grep("^t0204", names(ATUS_dataset))]
+Vehicle.Maintenance <- ATUS_dataset[, grep("^t0207", names(ATUS_dataset))]
+Housework <- ATUS_dataset[, grep("^t0201", names(ATUS_dataset))]
+Food.Preparation <- ATUS_dataset[, grep("^t0202", names(ATUS_dataset))] + ATUS_dataset$t070101 + ATUS_dataset$t070103
+Childcare <- ATUS_dataset[, grep("^t03", names(ATUS_dataset))]
 ```
 
 ```{r, cache=TRUE}
 # Create a data frame from relevant variables within ATUS Summary
 # Childnum there for future use
-Gender.Roles.Data <- select(ATUS.SUM, TUCASEID, TESEX, TEAGE, TUFNWGTP, TUYEAR, TRCHILDNUM, TUMONTH, TUDIARYDATE, TUGENERATION)
+Gender.Roles.Data <- select(ATUS_dataset, TUCASEID, TESEX, TEAGE, TUFNWGTP, TUYEAR, TRCHILDNUM, TUDIARYDATE, TUGENERATION)
 # Join this dataset with the CPS states info by unique id number of particiapnt
 # Add in relevant categories
 Gender.Roles.Data$Working <- rowSums(Working)
@@ -532,11 +545,11 @@ Gender.Roles.Data$TESEX[Gender.Roles.Data$TESEX == 2] <- "F"
 Gender.Roles.Differences <- data.frame('Year' = c(), 'Month' = c(), 'Variable' = c(), 'Generation' = c(), 'Difference' = c())
 for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Preparation", "Childcare")) {
     Gender.Roles.Data[,paste0('weighted.', variable)] <- 0
-    for (generation in c("Silent Generation", "Baby Boomers", "Generation X", "Millenials")) {
+    for (generation in c("Silent Generation", "Baby Boomers", "Generation X", "Millennials")) {
         for (year in unique(Gender.Roles.Data$TUYEAR)) {
-            for (month in unique(Gender.Roles.Data$TUMONTH)) {
+            for (month in unique(month(Gender.Roles.Data$TUDIARYDATE))) {
                 for (sex in c("M", "F")) {
-                    Filtered.Data <- filter(Gender.Roles.Data, TESEX == sex, TUYEAR == year, TUMONTH == month, TUGENERATION == generation)
+                    Filtered.Data <- filter(Gender.Roles.Data, TESEX == sex, TUYEAR == year, month(TUDAIRYDATE) == month, TUGENERATION == generation)
                     bottom.sum <- sum(Filtered.Data$TUFNWGTP)
                     top.sum <- sum(Filtered.Data$TUFNWGTP * Filtered.Data[,variable])
                     weighted.values <- top.sum / bottom.sum
@@ -546,7 +559,7 @@ for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "House
                         bottom.sum <- sum(Filtered.Regional.Data$TUFNWGTP)
                         top.sum <- sum(Filtered.Regional.Data$TUFNWGTP * Filtered.Regional.Data[,variable])
                         weighted.regional.values <- top.sum / bottom.sum
-                        Gender.Roles.Data[Gender.Roles.Data$TESEX == sex & Gender.Roles.Data$TUYEAR == year & Gender.Roles.Data$TUMONTH == month & Gender.Roles.Data$GEREG == region & Gender.Roles.Data$TUGENERATION == generation, paste0('weighted.', variable)] <- weighted.values
+                        Gender.Roles.Data[Gender.Roles.Data$TESEX == sex & Gender.Roles.Data$TUYEAR == year & month(Gender.Roles.Data$TUDIARYDATE) == month & Gender.Roles.Data$GEREG == region & Gender.Roles.Data$TUGENERATION == generation, paste0('weighted.', variable)] <- weighted.values
                     }
                 }
                 weighted.difference <- m.weighted.values - weighted.values
@@ -555,14 +568,11 @@ for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "House
         }
     }
 }
-# Difference <- abs(weighted.valuesM - weighted.valuesF)
 ```
 
 ```{r, cache=TRUE}
-# Gender.Differences <- data.frame(Year = rep(rep(2003:2017, each = 48), 4), Month = rep(rep(1:12, each = 4), 60), Region = rep(rep(1:4, each = 720), 4), Generation = rep(c("Silent Generation", "Baby Boomers", "Generation X", "Millenials"), 720))
-# Gender.Differences <- data.frame(Gender.Differences, Difference[1:2880], Difference[2881:5760], Difference[5761:8640], Difference[8641:11520], Difference[11521:14400], Difference[14401:17280])
-Gender.Roles.Train <- filter(Gender.Roles.Data, TUMONTH %% 2 == 0)
-Gender.Roles.Validate <- filter(Gender.Roles.Data, TUMONTH %% 2 != 0)
+Gender.Roles.Train <- filter(Gender.Roles.Data, month(TUDIARYDATE) %% 2 == 0)
+Gender.Roles.Validate <- filter(Gender.Roles.Data, month(TUDIARYDATE) %% 2 != 0)
 ```
 
 ```{r, cache=TRUE}
