Final Report changes.

--- a/Final Report/Final-Report-References.bib
+++ b/Final Report/Final-Report-References.bib
@@ -1,12 +1,20 @@
 @MISC{ATUS,
-  HOWPUBLISHED = {\url{https://www.bls.gov/tus/}},
-  AUTHOR = {{Bereau of Labor Statistics}},
+  AUTHOR = {{Bureau of Labor Statistics}},
   TITLE = {The American Time Use Survey},
-  YEAR = {2017}
-  }
+  YEAR = {2017},
+  HOWPUBLISHED = {\url{https://www.bls.gov/tus/}}
+}
+
 @INBOOK{ATUSDataDictionary,
-  AUTHOR = {{Bereau of Labor Statistics}},
+  AUTHOR = {{Bureau of Labor Statistics}},
   TITLE = {ATUS Data Dictionary},
   YEAR = {2017},
   PAGES = {11}
-  }
+}
+
+@MISC{atusdatasets,
+  TITLE = {\relax ATUS Datasets},
+  HOWPUBLISHED = {\url{https://www.bls.gov/tus/datafiles_0317.htm}}
+}
+
+
